tests/compiler/diagnostics-engine/parsing-errors/tests/invalid-subroutine-body/expected.txt
Error: Invalid subroutine body: found 'x'.
 --> Main.jack:4:9
  |
4 |         x = Memory.alloc(4);
  |         ^
Note: Expected a variable declaration or a statement.
